[tool.poetry]
name = "chaimaccountaudit"
version = "0.1.1"
description = "Slack commands for auditing chaim managed accounts"
authors = ["ccdale <chris.allison@hivehome.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ConnectedHomes/chaimaccountaudit"

[tool.poetry.dependencies]
python = "^3.8"
chalice = "^1.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
